# python-web-toolkit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  USAGE_EXAMPLES.md  pyproject.toml
.cursor/plans/: sphinx_documentation_setup_11ca65fe.plan.md
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  validate-dependencies.yml
.specstory/: statistics.json
.specstory/history/: 2026-03-18_02-00Z-sub-folder-as-separate-git-repository.md  2026-03-18_04-16-39Z-(1)-sub-folder-as-separate-git-repository.md  2026-03-18_04-16Z-(1)-sub-folder-as-separate-git-repository.md  2026-03-18_04-40-13Z-user-and-mcp-configuration.md  2026-03-18_04-40Z-user-and-mcp-configuration.md  2026-03-21_11-47-33Z-you-are-on-the.md  2026-03-21_11-57-23Z-testpypi-publisher-addition-process.md  2026-03-21_12-33-37Z-library-descriptions-in-readme.md  2026-03-21_12-52-50Z-exploration-of-python-package-public-apis.md  2026-03-21_14-36-22Z-documentation-and-configuration-exploration.md  2026-03-21_14-36-47Z-package-exploration-and-documentation.md  2026-03-21_14-37-41Z-monorepo-internal-package-dependency-analysis.md  2026-03-21_14-48-47Z-markdown-file-search-in-monorepo.md  2026-03-22_04-15-22Z-python-source-file-documentation-extraction.md  2026-03-22_04-15-52Z-python-source-file-documentation-extraction.md  2026-03-22_04-16-20Z-python-source-file-documentation-extraction.md  2026-03-22_04-17-15Z-documentation-content-structure-analysis.md  2026-03-22_04-17-41Z-readme.md-files-extraction-and-summary.md  2026-03-22_13-37-34Z-playwright-automation-configuration.md  2026-03-22_14-31-28Z-github-trusted-publisher-configuration-for-pypi-packages.md
docs/: architecture.md  conf.py  exception-comparison.md  index.rst  make.bat  quickstart.md  requirements.txt
examples/: QUICK_START.md  README.md
examples/domain/: building-apis.md  data-patterns.md  error-handling.md  utilities.md
examples/infrastructure/: application-patterns.md  building-apis.md  complete-backend-application.md  data-patterns.md  messaging-patterns.md  operations.md
scripts/: build-all.ps1  check-architecture.ps1  install-all.ps1  publish-prod.ps1  publish-test.ps1  test-all-with-coverage.ps1  test-all.ps1  thorough_profile.py
scripts/usage_demo/: battle_test.py  test_all.py  test_script.py
scripts/validation/: README.md  validate_packages.py
todos/: MISSED FROM ARCHITECTURE.md
